--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "formik": "^2.2.9",
+    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,7 +18,6 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
