--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier --write \"src/**/*.{js,scss}\"",
-    "lint": "eslint --ext .js src",
-    "prepare": "husky install"
+    "lint": "eslint --ext .js src"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,11 +46,6 @@
   },
   "devDependencies": {
     "eslint": "^7.20.0",
-    "eslint-plugin-react": "^7.26.1",
-    "husky": "^7.0.0",
-    "lint-staged": ">=10"
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "eslint-plugin-react": "^7.26.1"
   }
 }
