--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "formik": "^2.2.9",
-    "node-sass": "^4.14.1",
-    "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-paginate": "^7.1.3",
-    "react-redux": "^7.2.3",
-    "react-router-dom": "^5.3.0",
+    "@reduxjs/toolkit": "1.5.1",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "formik": "2.2.9",
+    "node-sass": "4.14.1",
+    "prettier": "2.4.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-paginate": "7.1.3",
+    "react-redux": "7.2.3",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "redux-persist": "^6.0.0",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "redux-persist": "6.0.0",
+    "uuid": "8.3.2",
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +44,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.20.0",
-    "eslint-plugin-react": "^7.26.1"
+    "eslint": "7.20.0",
+    "eslint-plugin-react": "7.26.1"
   }
 }
